update swsh dlc2

--- a/src/52poke.css
+++ b/src/52poke.css
@@ -866,12 +866,24 @@
     background-position: -1972px -336px
 }
 
+.sprite-icon-144G {
+    background-position: -612px -2296px
+}
+
 .sprite-icon-145 {
     background-position: 0 -392px
 }
 
+.sprite-icon-145G {
+    background-position: -680px -2296px
+}
+
 .sprite-icon-146 {
     background-position: -68px -392px
+}
+
+.sprite-icon-146G {
+    background-position: -748px -2296px
 }
 
 .sprite-icon-147 {
@@ -4932,4 +4944,32 @@
 
 .sprite-icon-893D {
     background-position: -1768px -2240px
+}
+
+.sprite-icon-894 {
+    background-position: -136px -2296px
+}
+
+.sprite-icon-895 {
+    background-position: -204px -2296px
+}
+
+.sprite-icon-896 {
+    background-position: -272px -2296px
+}
+
+.sprite-icon-897 {
+    background-position: -340px -2296px
+}
+
+.sprite-icon-898 {
+    background-position: -408px -2296px
+}
+
+.sprite-icon-898I {
+    background-position: -476px -2296px
+}
+
+.sprite-icon-898S {
+    background-position: -544px -2296px
 }
